# mantid

Framework/API/: CMakeLists.txt
Framework/API/src/: Algorithm.cpp  AlgorithmFactory.cpp  AlgorithmProxy.cpp  AsciiPointBase.cpp  BoxController.cpp  BoxControllerSettingsAlgorithm.cpp  FileLoaderRegistry.cpp  FrameworkManager.cpp  IFunction.cpp  Run.cpp  Sample.cpp  WorkspaceHistory.cpp  WorkspaceOpOverloads.cpp
Framework/API/test/: AlgorithmManagerTest.h  AlgorithmProxyTest.h  BoxControllerSettingsAlgorithmTest.h  LogManagerTest.h  RunTest.h  SampleTest.h
Framework/Algorithms/: CMakeLists.txt
Framework/Algorithms/src/: BinaryOperation.cpp  ChangeTimeZero.cpp  FFT.cpp  RealFFT.cpp  RenameWorkspace.cpp  SetUncertainties.cpp
Framework/Algorithms/test/: AnyShapeAbsorptionTest.h  AppendSpectraTest.h  BinaryOperationTest.h  CalculateCarpenterSampleCorrectionTest.h  CarpenterSampleCorrectionTest.h  ConvertUnitsTest.h  FFTDerivativeTest.h  FFTTest.h  FitPeaksTest.h  NormaliseByDetectorTest.h  PDDetermineCharacterizationsTest.h  PDFFourierTransformTest.h  RealFFTTest.h  ScaleTest.h  SofQWNormalisedPolygonTest.h  SphericalAbsorptionTest.h
Framework/Crystal/src/: IndexPeaks.cpp
Framework/CurveFitting/src/: IFittingAlgorithm.cpp
Framework/DataHandling/: CMakeLists.txt
Framework/DataHandling/src/: Load.cpp  LoadBankFromDiskTask.cpp  LoadCSNSNexus.cpp  LoadHelper.cpp  LoadISISNexus2.cpp  LoadInstrument.cpp  LoadMuonNexus2.cpp  LoadNexusProcessed.cpp  LoadRawHelper.cpp  LoadSampleEnvironment.cpp  NexusTester.cpp  ProcessBankData.cpp  SampleEnvironmentSpecParser.cpp  SetSampleMaterial.cpp
Framework/DataHandling/test/: DataBlockCompositeTest.h  (+3 more)
Framework/Kernel/: CMakeLists.txt
Framework/MDAlgorithms/: CMakeLists.txt
Framework/Reflectometry/: CMakeLists.txt
Framework/Reflectometry/test/: ApplyFloodWorkspaceTest.h  CMakeLists.txt  ConvertToReflectometryQTest.h  CreatePolarizationEfficienciesTest.h  CreateTransmissionWorkspace2Test.h  CreateTransmissionWorkspaceAuto2Test.h  CreateTransmissionWorkspaceAutoTest.h  CreateTransmissionWorkspaceTest.h  JoinISISPolarizationEfficienciesTest.h  LoadILLReflectometryTest.h  LoadISISPolarizationEfficienciesTest.h  NRCalculateSlitResolutionTest.h  PolarizationCorrectionFredrikzeTest.h  PolarizationCorrectionWildesTest.h  PolarizationEfficiencyCorTest.h  ReflectometryMomentumTransferTest.h  ReflectometryReductionOne2Test.h  ReflectometryReductionOneAuto2Test.h  ReflectometryReductionOneAuto3Test.h  ReflectometrySumInQTest.h  SaveANSTOAsciiTest.h  SaveILLCosmosAsciiTest.h  SaveReflCustomAsciiTest.h  SaveReflThreeColumnAsciiTest.h  SaveReflectometryAsciiTest.h  SpecularReflectionAlgorithmTest.h  SpecularReflectionCalculateTheta2Test.h  SpecularReflectionCalculateThetaTest.h  SpecularReflectionPositionCorrect2Test.h  SpecularReflectionPositionCorrectTest.h
MantidPlot/src/: FunctionCurve.h  ProjectRecovery.cpp  Spectrogram.cpp
(+285 files in other folders)
